parsercpp.output
State 1 conflicts: 2 shift/reduce
State 25 conflicts: 1 shift/reduce
State 72 conflicts: 2 reduce/reduce
State 90 conflicts: 1 shift/reduce
State 93 conflicts: 7 shift/reduce
State 107 conflicts: 1 shift/reduce
State 115 conflicts: 8 reduce/reduce
State 120 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 163 conflicts: 1 shift/reduce
State 165 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce
State 169 conflicts: 1 shift/reduce
State 184 conflicts: 1 shift/reduce
State 190 conflicts: 8 reduce/reduce
State 198 conflicts: 1 shift/reduce
State 210 conflicts: 1 shift/reduce
State 212 conflicts: 1 shift/reduce
State 218 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: varDeclaration
    5            | funDeclaration
    6            | recDeclaration
    7            | error

    8 recDeclaration: RECORD ID '{' localDeclarations '}'

    9 varDeclaration: typeSpecifier varDecList ';'
   10               | error varDecList ';'
   11               | typeSpecifier error ';'

   12 scopedVarDeclaration: scopedTypeSpecificer varDecList ';'
   13                     | error varDecList ';'
   14                     | typeSpecifier error ';'

   15 varDecList: varDecList ',' varDecInitialize
   16           | varDecList ',' error
   17           | varDecInitialize
   18           | error

   19 varDecInitialize: varDecId
   20                 | varDecId ':' simpleExpression
   21                 | error ':' simpleExpression
   22                 | varDecId ':' error

   23 varDecId: ID
   24         | ID '[' NUMCONST ']'
   25         | ID '[' error
   26         | error ']'

   27 scopedTypeSpecificer: STATIC typeSpecifier
   28                     | typeSpecifier

   29 typeSpecifier: returnTypeSpecifier
   30              | RECTYPE

   31 returnTypeSpecifier: INT
   32                    | BOOL
   33                    | CHAR

   34 funDeclaration: typeSpecifier ID '(' params ')' statement
   35               | ID '(' params ')' statement
   36               | typeSpecifier error
   37               | typeSpecifier ID '(' error
   38               | typeSpecifier ID '(' params ')' error
   39               | ID '(' error
   40               | ID '(' params ')' error

   41 params: paramList
   42       | %empty

   43 paramList: paramList ';' paramTypeList
   44          | paramTypeList
   45          | paramList ';' error
   46          | error

   47 paramTypeList: typeSpecifier paramIdList
   48              | typeSpecifier error

   49 paramIdList: paramIdList ',' paramId
   50            | paramId
   51            | paramIdList ',' error
   52            | error

   53 paramId: ID
   54        | ID '[' ']'
   55        | error ']'

   56 statement: matchedStatement
   57          | unmatchedStatement

   58 matchedStatement: expressionStatement
   59                 | compoundStatement
   60                 | returnStatement
   61                 | breakStatement
   62                 | matchedSelectionStatement
   63                 | matchedIterationStatement

   64 unmatchedStatement: unmatchedSelectionStatement
   65                   | unmatchedIterationStatement

   66 compoundStatement: '{' localDeclarations statementList '}'
   67                  | '{' error statementList '}'
   68                  | '{' localDeclarations error '}'

   69 localDeclarations: localDeclarations scopedVarDeclaration
   70                  | %empty

   71 statementList: statementList statement
   72              | %empty

   73 expressionStatement: expression ';'
   74                    | ';'

   75 matchedSelectionStatement: IF '(' simpleExpression ')' matchedStatement ELSE matchedStatement
   76                          | IF '(' error
   77                          | IF error ')' matchedStatement ELSE matchedStatement

   78 unmatchedSelectionStatement: IF '(' simpleExpression ')' statement
   79                            | IF '(' simpleExpression ')' matchedStatement ELSE unmatchedStatement
   80                            | IF error
   81                            | IF error ')' statement
   82                            | IF error ')' matchedStatement ELSE unmatchedStatement

   83 matchedIterationStatement: WHILE '(' simpleExpression ')' matchedStatement
   84                          | WHILE error ')' matchedStatement
   85                          | WHILE '(' error ')' matchedStatement
   86                          | WHILE error
   87                          | error

   88 unmatchedIterationStatement: WHILE '(' simpleExpression ')' unmatchedStatement
   89                            | WHILE error ')' unmatchedStatement
   90                            | WHILE '(' error ')' unmatchedStatement

   91 returnStatement: RETURN ';'
   92                | RETURN expression ';'

   93 breakStatement: BREAK ';'

   94 expression: mutable assignop expression
   95           | error assignop error
   96           | mutable INC
   97           | error INC
   98           | mutable DEC
   99           | error DEC
  100           | simpleExpression

  101 assignop: '='
  102         | ADDASS
  103         | SUBASS
  104         | MULASS
  105         | DIVASS

  106 simpleExpression: simpleExpression OR andExpression
  107                 | simpleExpression OR error
  108                 | andExpression

  109 andExpression: andExpression AND unaryRelExpression
  110              | andExpression AND error
  111              | unaryRelExpression

  112 unaryRelExpression: NOT unaryRelExpression
  113                   | NOT error
  114                   | relExpression

  115 relExpression: sumExpression relop sumExpression
  116              | sumExpression relop error
  117              | error relop sumExpression
  118              | sumExpression

  119 relop: LESSEQ
  120      | '<'
  121      | '>'
  122      | GRTEQ
  123      | EQ
  124      | NOTEQ

  125 sumExpression: sumExpression sumop term
  126              | sumExpression sumop error
  127              | term

  128 sumop: '+'
  129      | '-'

  130 term: term mulop unaryExpression
  131     | term mulop error
  132     | unaryExpression

  133 mulop: '*'
  134      | '/'
  135      | '%'

  136 unaryExpression: unaryop unaryExpression
  137                | unaryop error
  138                | factor

  139 unaryop: '-'
  140        | '*'
  141        | '?'

  142 factor: immutable
  143       | mutable

  144 mutable: ID
  145        | mutable '[' expression ']'
  146        | mutable '.' ID

  147 immutable: '(' expression ')'
  148          | '(' error
  149          | error ')'
  150          | call
  151          | constant

  152 call: ID '(' args ')'
  153     | error '('

  154 args: argList
  155     | %empty

  156 argList: argList ',' expression
  157        | argList ',' error
  158        | expression

  159 constant: NUMCONST
  160         | CHARCONST
  161         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
'%' (37) 135
'(' (40) 34 35 37 38 39 40 75 76 78 79 83 85 88 90 147 148 152 153
')' (41) 34 35 38 40 75 77 78 79 81 82 83 84 85 88 89 90 147 149 152
'*' (42) 133 140
'+' (43) 128
',' (44) 15 16 49 51 156 157
'-' (45) 129 139
'.' (46) 146
'/' (47) 134
':' (58) 20 21 22
';' (59) 9 10 11 12 13 14 43 45 73 74 91 92 93
'<' (60) 120
'=' (61) 101
'>' (62) 121
'?' (63) 141
'[' (91) 24 25 54 145
']' (93) 24 26 54 55 145
'{' (123) 8 66 67 68
'}' (125) 8 66 67 68
error (256) 7 10 11 13 14 16 18 21 22 25 26 36 37 38 39 40 45 46 48
    51 52 55 67 68 76 77 80 81 82 84 85 86 87 89 90 95 97 99 107 110
    113 116 117 126 131 137 148 149 153 157
NUMCONST (258) 24 159
CHARCONST (259) 160
BOOLCONST (260) 161
AND (261) 109 110
OR (262) 106 107
NOT (263) 112 113
NOTEQ (264) 124
MULASS (265) 104
INC (266) 96 97
ADDASS (267) 102
DEC (268) 98 99
SUBASS (269) 103
DIVASS (270) 105
LESSEQ (271) 119
EQ (272) 123
GRTEQ (273) 122
ID (274) 8 23 24 25 34 35 37 38 39 40 53 54 144 146 152
RECORD (275) 8
INT (276) 31
BOOL (277) 32
CHAR (278) 33
STATIC (279) 27
IF (280) 75 76 77 78 79 80 81 82
WHILE (281) 83 84 85 86 88 89 90
BREAK (282) 93
ELSE (283) 75 77 79 82
RETURN (284) 91 92
RECTYPE (285) 30


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
declarationList (52)
    on left: 2 3, on right: 1 2
declaration (53)
    on left: 4 5 6 7, on right: 2 3
recDeclaration (54)
    on left: 8, on right: 6
varDeclaration (55)
    on left: 9 10 11, on right: 4
scopedVarDeclaration (56)
    on left: 12 13 14, on right: 69
varDecList (57)
    on left: 15 16 17 18, on right: 9 10 12 13 15 16
varDecInitialize (58)
    on left: 19 20 21 22, on right: 15 17
varDecId (59)
    on left: 23 24 25 26, on right: 19 20 22
scopedTypeSpecificer (60)
    on left: 27 28, on right: 12
typeSpecifier (61)
    on left: 29 30, on right: 9 11 14 27 28 34 36 37 38 47 48
returnTypeSpecifier (62)
    on left: 31 32 33, on right: 29
funDeclaration (63)
    on left: 34 35 36 37 38 39 40, on right: 5
params (64)
    on left: 41 42, on right: 34 35 38 40
paramList (65)
    on left: 43 44 45 46, on right: 41 43 45
paramTypeList (66)
    on left: 47 48, on right: 43 44
paramIdList (67)
    on left: 49 50 51 52, on right: 47 49 51
paramId (68)
    on left: 53 54 55, on right: 49 50
statement (69)
    on left: 56 57, on right: 34 35 71 78 81
matchedStatement (70)
    on left: 58 59 60 61 62 63, on right: 56 75 77 79 82 83 84 85
unmatchedStatement (71)
    on left: 64 65, on right: 57 79 82 88 89 90
compoundStatement (72)
    on left: 66 67 68, on right: 59
localDeclarations (73)
    on left: 69 70, on right: 8 66 68 69
statementList (74)
    on left: 71 72, on right: 66 67 71
expressionStatement (75)
    on left: 73 74, on right: 58
matchedSelectionStatement (76)
    on left: 75 76 77, on right: 62
unmatchedSelectionStatement (77)
    on left: 78 79 80 81 82, on right: 64
matchedIterationStatement (78)
    on left: 83 84 85 86 87, on right: 63
unmatchedIterationStatement (79)
    on left: 88 89 90, on right: 65
returnStatement (80)
    on left: 91 92, on right: 60
breakStatement (81)
    on left: 93, on right: 61
expression (82)
    on left: 94 95 96 97 98 99 100, on right: 73 92 94 145 147 156
    158
assignop (83)
    on left: 101 102 103 104 105, on right: 94 95
simpleExpression (84)
    on left: 106 107 108, on right: 20 21 75 78 79 83 88 100 106 107
andExpression (85)
    on left: 109 110 111, on right: 106 108 109 110
unaryRelExpression (86)
    on left: 112 113 114, on right: 109 111 112
relExpression (87)
    on left: 115 116 117 118, on right: 114
relop (88)
    on left: 119 120 121 122 123 124, on right: 115 116 117
sumExpression (89)
    on left: 125 126 127, on right: 115 116 117 118 125 126
sumop (90)
    on left: 128 129, on right: 125 126
term (91)
    on left: 130 131 132, on right: 125 127 130 131
mulop (92)
    on left: 133 134 135, on right: 130 131
unaryExpression (93)
    on left: 136 137 138, on right: 130 132 136
unaryop (94)
    on left: 139 140 141, on right: 136 137
factor (95)
    on left: 142 143, on right: 138
mutable (96)
    on left: 144 145 146, on right: 94 96 98 143 145 146
immutable (97)
    on left: 147 148 149 150 151, on right: 142
call (98)
    on left: 152 153, on right: 150
args (99)
    on left: 154 155, on right: 152
argList (100)
    on left: 156 157 158, on right: 154 156 157
constant (101)
    on left: 159 160 161, on right: 151


State 0

    0 $accept: . program $end

    error    shift, and go to state 1
    ID       shift, and go to state 2
    RECORD   shift, and go to state 3
    INT      shift, and go to state 4
    BOOL     shift, and go to state 5
    CHAR     shift, and go to state 6
    RECTYPE  shift, and go to state 7

    program              go to state 8
    declarationList      go to state 9
    declaration          go to state 10
    recDeclaration       go to state 11
    varDeclaration       go to state 12
    typeSpecifier        go to state 13
    returnTypeSpecifier  go to state 14
    funDeclaration       go to state 15


State 1

    7 declaration: error .
   10 varDeclaration: error . varDecList ';'

    error  shift, and go to state 16
    ID     shift, and go to state 17

    $end     reduce using rule 7 (declaration)
    error    [reduce using rule 7 (declaration)]
    ID       [reduce using rule 7 (declaration)]
    RECORD   reduce using rule 7 (declaration)
    INT      reduce using rule 7 (declaration)
    BOOL     reduce using rule 7 (declaration)
    CHAR     reduce using rule 7 (declaration)
    RECTYPE  reduce using rule 7 (declaration)

    varDecList        go to state 18
    varDecInitialize  go to state 19
    varDecId          go to state 20


State 2

   35 funDeclaration: ID . '(' params ')' statement
   39               | ID . '(' error
   40               | ID . '(' params ')' error

    '('  shift, and go to state 21


State 3

    8 recDeclaration: RECORD . ID '{' localDeclarations '}'

    ID  shift, and go to state 22


State 4

   31 returnTypeSpecifier: INT .

    $default  reduce using rule 31 (returnTypeSpecifier)


State 5

   32 returnTypeSpecifier: BOOL .

    $default  reduce using rule 32 (returnTypeSpecifier)


State 6

   33 returnTypeSpecifier: CHAR .

    $default  reduce using rule 33 (returnTypeSpecifier)


State 7

   30 typeSpecifier: RECTYPE .

    $default  reduce using rule 30 (typeSpecifier)


State 8

    0 $accept: program . $end

    $end  shift, and go to state 23


State 9

    1 program: declarationList .
    2 declarationList: declarationList . declaration

    error    shift, and go to state 1
    ID       shift, and go to state 2
    RECORD   shift, and go to state 3
    INT      shift, and go to state 4
    BOOL     shift, and go to state 5
    CHAR     shift, and go to state 6
    RECTYPE  shift, and go to state 7

    $end  reduce using rule 1 (program)

    declaration          go to state 24
    recDeclaration       go to state 11
    varDeclaration       go to state 12
    typeSpecifier        go to state 13
    returnTypeSpecifier  go to state 14
    funDeclaration       go to state 15


State 10

    3 declarationList: declaration .

    $default  reduce using rule 3 (declarationList)


State 11

    6 declaration: recDeclaration .

    $default  reduce using rule 6 (declaration)


State 12

    4 declaration: varDeclaration .

    $default  reduce using rule 4 (declaration)


State 13

    9 varDeclaration: typeSpecifier . varDecList ';'
   11               | typeSpecifier . error ';'
   34 funDeclaration: typeSpecifier . ID '(' params ')' statement
   36               | typeSpecifier . error
   37               | typeSpecifier . ID '(' error
   38               | typeSpecifier . ID '(' params ')' error

    error  shift, and go to state 25
    ID     shift, and go to state 26

    varDecList        go to state 27
    varDecInitialize  go to state 19
    varDecId          go to state 20


State 14

   29 typeSpecifier: returnTypeSpecifier .

    $default  reduce using rule 29 (typeSpecifier)


State 15

    5 declaration: funDeclaration .

    $default  reduce using rule 5 (declaration)


State 16

   18 varDecList: error .
   21 varDecInitialize: error . ':' simpleExpression
   26 varDecId: error . ']'

    ']'  shift, and go to state 28
    ':'  shift, and go to state 29

    $default  reduce using rule 18 (varDecList)


State 17

   23 varDecId: ID .
   24         | ID . '[' NUMCONST ']'
   25         | ID . '[' error

    '['  shift, and go to state 30

    $default  reduce using rule 23 (varDecId)


State 18
